# crazyflie-kinect-control

./: .gitignore  AutoColourFilter.cpp  CMakeLists.txt  LICENSE  README.md  angle_t.lcm  basiclog (copy).py  example_t.lcm  listener.py  novicon_listener  novicon_listener.cpp  pos_listener.py  pub_state  pub_state.cpp  send-message.py  send_message.cpp  vicon_listener  vicon_listener.cpp  vicon_t.lcm
crazyflie_t/: crazyflie_controller_commands_t.hpp  crazyflie_hover_commands_t.hpp  crazyflie_imu_t.hpp  crazyflie_input_t.hpp  crazyflie_pos_t.hpp  crazyflie_positioninput_t.hpp  crazyflie_state_estimate_t.hpp  crazyflie_state_estimator_commands_t.hpp  dxyz_compare_t.hpp  kalman_args_t.hpp  kalman_out_t.hpp  polytopes_t.hpp  vortex_sensor_t.hpp
exlcm/: __init__.py  angle_t.hpp  angle_t.py  example_t.hpp  example_t.py
vicon_t/: __init__.py  vicon_pos_t.hpp  vicon_pos_t.py
